force-app/main/default/objects/PowerPort__c/fields/Type_of_port_catheter__c.field-meta.xml
<CustomField>
    <fullName>Type_of_port_catheter__c</fullName>
    <description>Do you know the type of port catheter that was implanted?:</description>
    <inlineHelpText>Do you know the type of port catheter that was implanted?:</inlineHelpText>
    <label>Type of port catheter</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BardPort</fullName>
            </value>
            <value>
                <fullName>Bard PowerPort</fullName>
            </value>
            <value>
                <fullName>Bard SlimPort</fullName>
            </value>
            <value>
                <fullName>Bard MRI Ports</fullName>
            </value>
            <value>
                <fullName>Bard Groshong© Catheter</fullName>
            </value>
            <value>
                <fullName>Bard Titanium Low-Profile Port</fullName>
            </value>
            <value>
                <fullName>Bard Vaccess CT</fullName>
            </value>
            <value>
                <fullName>Bard X-Port ISP</fullName>
            </value>
            <value>
                <fullName>Angiodynamics/Navilyst BioFlo Port</fullName>
            </value>
            <value>
                <fullName>Angiodynamics/Navilyst SmartPort</fullName>
            </value>
            <value>
                <fullName>Angiodynamics/Navilyst SmartPort CT</fullName>
            </value>
            <value>
                <fullName>Angiodynamics/Navilyst Vaxcel</fullName>
            </value>
            <value>
                <fullName>Angiodynamics/Navilyst Vortex</fullName>
            </value>
            <value>
                <fullName>Angiodynamics/Navilyst Xcela</fullName>
            </value>
            <value>
                <fullName>Smiths Deltec</fullName>
            </value>
            <value>
                <fullName>Smiths Medical P.A.S. Port</fullName>
            </value>
            <value>
                <fullName>Smiths Medical Port-a-Cath</fullName>
            </value>
            <value>
                <fullName>Smiths Medical Power P.A.C.</fullName>
            </value>
            <value>
                <fullName>MedComp Dignity Port</fullName>
            </value>
            <value>
                <fullName>MedComp Profuse Port</fullName>
            </value>
            <value>
                <fullName>B. Braun Medical Celsite</fullName>
            </value>
            <value>
                <fullName>Cook Vascular Vital-Port</fullName>
            </value>
            <value>
                <fullName>Covidien Chemosite Port</fullName>
            </value>
            <value>
                <fullName>Teleflex Arrow CVC Kit</fullName>
            </value>
            <value>
                <fullName>Other/Unknown</fullName>
            </value>
            <value>
                <fullName>Bard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>