force-app/main/default/objects/PowerPort__c/fields/Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_ID__c</fullName>
    <displayFormat>PP-{0000}</displayFormat>
    <label>Unique ID</label>
    <type>AutoNumber</type>
</CustomField>