force-app/main/default/objects/PowerPort__c/fields/Unique_identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_identifier__c</fullName>
    <label>Unique identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>