force-app/main/default/objects/PowerPort__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Implanted_Port_Catheters</relationshipName>
    <type>Lookup</type>
</CustomField>