force-app/main/default/objects/PowerPort__c/fields/Verbal_Permission_for_Representation__c.field-meta.xml
<CustomField>
    <fullName>Verbal_Permission_for_Representation__c</fullName>
    <label>Verbal Permission for Representation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Verbal permission given</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>