force-app/main/default/objects/PowerPort__c/fields/Was_your_port_replaced_or_removed__c.field-meta.xml
<CustomField>
    <fullName>Was_your_port_replaced_or_removed__c</fullName>
    <description>Was your port replaced or removed?</description>
    <inlineHelpText>Was your port replaced or removed?</inlineHelpText>
    <label>Was your port replaced or removed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No (DNQ)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>