force-app/main/default/objects/PowerPort__c/fields/What_doctor_treated_you__c.field-meta.xml
<CustomField>
    <fullName>What_doctor_treated_you__c</fullName>
    <description>What doctor treated you? (Name &amp; location)</description>
    <inlineHelpText>What doctor treated you? (Name &amp; location)</inlineHelpText>
    <label>What doctor treated you?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>