force-app/main/default/objects/PowerPort__c/fields/What_physician_implanted_the_port__c.field-meta.xml
<CustomField>
    <fullName>What_physician_implanted_the_port__c</fullName>
    <description>What physician implanted the port? (name and location)</description>
    <inlineHelpText>What physician implanted the port? (name and location)</inlineHelpText>
    <label>What physician implanted the port?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>