force-app/main/default/objects/PowerPort__c/fields/When_did_the_injury_occur__c.field-meta.xml
<CustomField>
    <fullName>When_did_the_injury_occur__c</fullName>
    <label>When did the injury occur?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>