force-app/main/default/objects/PowerPort__c/fields/Where_did_treatment_for_injury_received__c.field-meta.xml
<CustomField>
    <fullName>Where_did_treatment_for_injury_received__c</fullName>
    <description>Where did you receive the treatment for this injury? (Name of hospital, State of facility)</description>
    <inlineHelpText>Where did you receive the treatment for this injury? (Name of hospital, State of facility)</inlineHelpText>
    <label>Where did treatment for injury received?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>