force-app/main/default/objects/PowerPort__c/fields/Your_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Your_Date_of_Birth__c</fullName>
    <label>Your Date of Birth</label>
    <type>Date</type>
</CustomField>