force-app/main/default/objects/PowerPort__c/fields/Your_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Your_Email_Address__c</fullName>
    <description>May I have your email address as well?</description>
    <inlineHelpText>May I have your email address as well?</inlineHelpText>
    <label>Your Email Address</label>
    <type>Email</type>
</CustomField>