force-app/main/default/objects/PowerPort__c/fields/Your_relation_to_the_injured__c.field-meta.xml
<CustomField>
    <fullName>Your_relation_to_the_injured__c</fullName>
    <description>What is your relationship to the Injured Party?</description>
    <inlineHelpText>What is your relationship to the Injured Party?</inlineHelpText>
    <label>Your relation to the injured</label>
    <length>255</length>
    <type>Text</type>
</CustomField>