force-app/main/default/objects/PowerPort__c/recordTypes/NGK_Law.recordType-meta.xml
<RecordType>
    <fullName>NGK_Law</fullName>
    <active>true</active>
    <label>NGK Law</label>
</RecordType>