force-app/main/default/objects/PowerPort__c/recordTypes/Scott_and_Scott_Powerport.recordType-meta.xml
<RecordType>
    <fullName>Scott_and_Scott_Powerport</fullName>
    <active>true</active>
    <label>Scott &amp; Scott Powerport</label>
</RecordType>