force-app/main/default/objects/PowerPort__c/recordTypes/Scout_Law_Bard_PowerPort.recordType-meta.xml
<RecordType>
    <fullName>Scout_Law_Bard_PowerPort</fullName>
    <active>true</active>
    <label>Scout Law - Bard PowerPort</label>
</RecordType>